<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/mainHome_post_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/mainHome_image_view"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:src="@mipmap/ic_default_profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/postHome_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/user_name_post"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/mainHome_image_view"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dateHome_post_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/dateHome_post_view"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/mainHome_image_view"
                app:layout_constraintTop_toBottomOf="@+id/postHome_user_name" />

            <TextView
                android:id="@+id/titleHome_post_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/titleHome_post_view"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/dateHome_post_view"
                app:layout_constraintTop_toBottomOf="@+id/dateHome_post_view" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>